// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a Redo icon 1`] = `
<span
  data-active={false}
  onClick={[Function]}
  onMouseDown={[Function]}
>
  <svg
    className=""
    height="18px"
    onChange={undefined}
    viewBox="0 0 18 18"
    width="18px"
  >
    <polygon
      className="ql-fill ql-stroke"
      points="12 10 14 12 16 10 12 10"
    />
    <path
      className="ql-stroke"
      d="M9.91,13.91A4.6,4.6,0,0,1,9,14a5,5,0,1,1,5-5"
    />
  </svg>
</span>
`;

exports[`create a Undo icon 1`] = `
<span
  data-active={false}
  onClick={[Function]}
  onMouseDown={[Function]}
>
  <svg
    className={undefined}
    colorLabelClassName={undefined}
    colorStyle={undefined}
    evenClassName={undefined}
    height="18px"
    strokeMitterClassName={undefined}
    thinClassName={undefined}
    transparentClassName={undefined}
    viewBox="0 0 18 18"
    width="18px"
  >
    <polygon
      className="ql-fill ql-stroke"
      points="6 10 4 12 2 10 6 10"
    />
    <path
      className="ql-stroke"
      d="M8.09,13.91A4.6,4.6,0,0,0,9,14,5,5,0,1,0,4,9"
    />
  </svg>
</span>
`;
